# depthai-ir-split-pipeline

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: rgbd.yaml
include/oak/: pipeline.h
launch/: rgbd.launch.py
src/: oak_node.cpp  pipeline.cpp
