<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthai-ir-split-pipeline</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="paul@todo.todo">paul</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>sensor_msgs</depend>
  <depend>depthai_ros_driver</depend>
  <depend>depthai_ros</depend>
  <depend>depthai_bridge</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
